[tool.poetry]
name = "pytest-demo-for-data-science-code"
version = "0.1.0"
description = ""
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"
pandas = "^2.2.2"
yfinance = "^0.2.40"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
docformatter = "^1.7.5"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
